timeline__grid: fixed too much space at bottom

--- a/styles/_timeline.scss
+++ b/styles/_timeline.scss
@@ -27,7 +27,10 @@
         display: grid;
         grid-template-columns: repeat(12,1fr);
         grid-template-rows: repeat(9, 1fr);
-        
+        margin-bottom: -15rem;
+        @media only screen and (min-width: $md) {
+            margin-bottom: -30rem;
+        }
     }
 
 
